--- a/index.html
+++ b/index.html
@@ -1,67 +1,117 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <style>
         body {
+            margin: 0;
             font-family: Arial, sans-serif;
+            background: linear-gradient(to bottom, #007bff, #004b8d);
+            color: white;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
-            background-color: #f4f4f4;
         }
-        .login-form {
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .login-form h2 {
+
+        .container {
+            background: rgba(255, 255, 255, 0.1);
+            padding: 30px;
+            border-radius: 20px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
             text-align: center;
+            width: 90%;
+            max-width: 600px;
         }
-        .login-form input {
-            width: 100%;
+
+        h1 {
+            font-size: 36px;
+            margin-bottom: 20px;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+        }
+
+        form {
+            margin: 20px 0;
+        }
+
+        input {
+            width: 90%;
+            max-width: 400px;
             padding: 10px;
             margin: 10px 0;
-            border: 1px solid #ddd;
-            border-radius: 4px;
+            border-radius: 5px;
+            border: none;
+            font-size: 18px;
         }
-        .login-form button {
-            width: 100%;
-            padding: 10px;
-            background-color: #4CAF50;
+
+        button {
+            background: #28a745;
             color: white;
             border: none;
-            border-radius: 4px;
+            padding: 10px 20px;
+            font-size: 18px;
+            border-radius: 5px;
             cursor: pointer;
+            margin: 10px 0;
         }
-        .login-form button:hover {
-            background-color: #45a049;
+
+        button:hover {
+            background: #218838;
         }
+
         .error-message {
-            color: red;
-            text-align: center;
+            color: #ff6666;
+            display: none;
+            margin-top: 10px;
         }
     </style>
 </head>
 <body>
-    <div class="login-form">
-        <h2>Login</h2>
+    <div class="container">
+        <h1>Login</h1>
         <form id="loginForm">
             <input type="text" id="username" placeholder="Username" required>
             <input type="password" id="password" placeholder="Password" required>
             <button type="submit">Login</button>
         </form>
-        <div id="error-message" class="error-message" style="display: none;">
+        <div id="error-message" class="error-message">
             Username atau password salah!
         </div>
     </div>
 
-    <!-- Menghubungkan JavaScript eksternal -->
-    <script src="/login.js"></script>
+    <script>
+        document.getElementById("loginForm").addEventListener("submit", async function (e) {
+            e.preventDefault(); // Mencegah submit form default
+
+            // Ambil input dari pengguna
+            const username = document.getElementById("username").value;
+            const password = document.getElementById("password").value;
+
+            try {
+                // Kirim data ke API menggunakan fetch
+                const response = await fetch("/api/login", {
+                    method: "POST",
+                    headers: {
+                        "Content-Type": "application/json",
+                    },
+                    body: JSON.stringify({ username, password }),
+                });
+
+                if (response.ok) {
+                    // Login berhasil, arahkan ke halaman berikutnya
+                    window.location.href = "/pub/data.html";
+                } else {
+                    // Tampilkan pesan error
+                    const errorMessage = document.getElementById("error-message");
+                    errorMessage.style.display = "block";
+                }
+            } catch (error) {
+                console.error("Error during login:", error);
+            }
+        });
+    </script>
 </body>
 </html>
